--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.0",
     "@astrojs/check": "^0.4.1",
+    "astro": "^4.3.0",
+    "sharp": "^0.33.2",
     "typescript": "^5.3.3"
   }
 }
